Fix clock not aligning correctly

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     border: 0px;
     width: 100%;
     text-shadow: 0 5px 18px black;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 30% 70%;
     grid-template-rows: 108px 95px;
 }
 
@@ -232,12 +232,13 @@ input[type=range]::-webkit-slider-thumb {
 /***********************************/
 
 #divClock {
+    left: 0;
     grid-row: 2;
     grid-column: 2;
     text-align: right;
-    margin-top: 18px;
-    margin-right: 22px;
+    margin-top: 16px;
     text-shadow: 0 5px 18px rgba(0,0,0,0.33);
+    margin-right: 18px;
 }
 
 #clockTime {
